test/fixtures/invalid-typescript-extension/public/app.ts
import './missing.ts';

document.body.dataset.loaded = 'true';
